--- a/app/badbrowser.html
+++ b/app/badbrowser.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>Telegram Web</title>
+  <title>Kotatogram Web</title>
 
   <!-- build:css css/badbrowser.css -->
   <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.css"/>
@@ -23,7 +23,7 @@
 
       <div class="bad_browser_text">
         <p>
-          Don't take this personally, but your browser is too old to run <strong>Telegram Web</strong>.<br/>
+          Don't take this personally, but your browser is too old to run <strong>Kotatogram Web</strong>.<br/>
           We require HTML5 support for the MTProto secure messaging protocol to work.
         </p>
         <p>
