--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
   <![endif]-->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>Telegram Web</title>
+  <title>Kotatogram Web</title>
 
   <!-- build:css css/app.css -->
   <link rel="stylesheet" href="vendor/angular/angular-csp.css"/>
@@ -26,19 +26,19 @@
   <link rel="apple-touch-icon" sizes="120x120" href="img/iphone_home120.png">
   <link rel="apple-touch-startup-image" media="(device-width: 320px)" href="img/iphone_startup.png">
 
-  <meta name="apple-mobile-web-app-title" content="Telegram Web">
+  <meta name="apple-mobile-web-app-title" content="Kotatogram Web">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="theme-color" content="#497495">
   <meta name="google" content="notranslate">
 
-  <meta property="og:title" content="Telegram Web">
-  <meta property="og:url" content="https://web.telegram.org/">
-  <meta property="og:image" content="https://web.telegram.org/img/logo_share.png">
-  <meta property="og:site_name" content="Telegram Web">
-  <meta property="description" content="Welcome to the Web application of Telegram messenger. See https://github.com/zhukov/webogram for more info.">
-  <meta property="og:description" content="Welcome to the Web application of Telegram messenger. See https://github.com/zhukov/webogram for more info.">
+  <meta property="og:title" content="Kotatogram Web">
+  <meta property="og:url" content="https://kotatogram.github.io/kotatogram-oldweb">
+  <meta property="og:image" content="https://kotatogram.github.io/kotatogram-oldweb/img/logo_share.png">
+  <meta property="og:site_name" content="Kotatogram Web">
+  <meta property="description" content="Welcome to the Web application of Telegram messenger. See https://github.com/kotatogram/kotatogram-oldweb for more info.">
+  <meta property="og:description" content="Welcome to the Web application of Telegram messenger. See https://github.com/kotatogram/kotatogram-oldweb for more info.">
 
 </head>
 <body>
